--- a/notes/freqanalysis.tex
+++ b/notes/freqanalysis.tex
@@ -22,7 +22,7 @@ Thus the server has access to the plaintext frequency information of the databas
 %In real databases, columns hold names, short numbers, or genders so plaintexts are often repeated.
 This will allow for what we will call a \textit{frequency analysis attack}.
     
-One possible defense might be to use a different key for every entry so that messages do not encrypt to the same ciphertext every time. However, the proxy must then encrypt every entry in a column in order to do a search query, which  is detrimental to the efficiency of the proxy. However, solutions which try to hide frequency information with less computational overhead, such as frequency smoothing \cite{Lacharité2018FSE}, have been proposed.
+One possible defense might be to use a different key for every entry so that messages do not encrypt to the same ciphertext every time. However, the proxy must then encrypt every entry in a column in order to do a search query, which  is detrimental to the efficiency of the proxy. However, solutions which try to hide frequency information with less computational overhead, such as frequency smoothing \cite{Lacharite2018FSE}, have been proposed.
 
 \paragraph{Frequency analysis attacks.}
     Why is the knowledge of a repeated plaintext sensitive information? Suppose the most common name is ``Bob", and in the US 20\% of people are named ``Bob". If I have a database which is sampled fairly uniformly among people in the US and 20\% of the ciphertexts in the name column are $0x011010$, I can be fairly confident that the decryption of this name is in fact ``Bob". This is already more information than we would like to share with an untrusted server, but if we can easily recover a high percentage of names, and we can in a similar fashion recover a high percentage of information in other columns, we reveal information throughout specific rows and possibly of specific users.
