--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -47,6 +47,18 @@
   year={1984}
 }
 
+@article{goldwasser1989knowledge,
+  title={The knowledge complexity of interactive proof systems},
+  author={Goldwasser, Shafi and Micali, Silvio and Rackoff, Charles},
+  journal={SIAM Journal on computing},
+  volume={18},
+  number={1},
+  pages={186--208},
+  year={1989},
+  publisher={SIAM}
+}
+
+
 @article{shannon1949communication,
   title={Communication theory of secrecy systems},
   author={Shannon, Claude E},
@@ -361,7 +373,7 @@ doi = {10.1147/rd.383.0243}
   organization={Springer}
 }
 
-@article{Lacharité2018FSE,
+@article{Lacharite2018FSE,
  title={Frequency-smoothing encryption: preventing snapshot attacks on deterministically encrypted data},
  volume={2018},
  url={https://tosc.iacr.org/index.php/ToSC/article/view/852},
