--- a/notes/zknowledge.tex
+++ b/notes/zknowledge.tex
@@ -15,16 +15,83 @@ We can define Sigma protocols, and thus interactive zero-knowledge proofs, relat
 
 \begin{tikzpicture}
     \node[draw, rectangle] (P) {Prover};
-    \node[below=5cm of P] (P2) {};
+    \node[below=4cm of P] (P2) {};
+    \node[right=5cm of P, draw, rectangle] (V) {Verifier};
+    \node[below=4cm of V] (V2) {};
 
-    \node[draw, rectangle, right=5cm of P] (V) {Verifier};
-    \node[below=5cm of V] (V2) {};
+    \node[below=1cm of P] (a) {};
+    \node[below=1.5cm of V] (b) {};
+    \node[below=2cm of V] (c) {};
+    \node[below=2.5cm of P] (d) {};
+    \node[below=3cm of P] (e) {};
+    \node[below=3.5cm of V] (f) {};
+
+    \node[left=0.2cm of a] (genR) { $R \getsr P.com(Y)$ };
+    \node[right=0.2cm of c] (genc) { $c \getsr C$ };
+    \node[left=0.2cm of e] (genz) { $z \gets P.resp(x,R,c)$ };
+    \node[right=0.2cm of f] (verify) { $b \gets V.ver(Y,R,c,z)$ };
 
     \draw[-] (P) -- (P2);
     \draw[-] (V) -- (V2);
 
+    \draw[->] (a.center) -- (b.center) node [midway, above] {$R$};
+    \draw[->] (c.center) -- (d.center) node [midway, above] {$c$};
+    \draw[->] (e.center) -- (f.center) node [midway, above] {$z$};
+
 \end{tikzpicture}
 \end{figure}
+
+We now generalize the Sigma protocol to prove predicates of the following form.
+
+\begin{equation*}
+    \phi(x_1, \dots, x_n) = \left\{ u_1 = \prod_{j=1}^{n} g_{1j}^{x_j} \land \dots \land u_m  = \prod_{j=1}^{n} g_{mj}^{x_j}\right\}
+\end{equation*}
+
+Here, $x_1, \dots, x_n$ are the witnesses. The statements are encoded by the $u_j$ and $g_{ij}$ values.
+We can then adapt this protocol to different use-cases by adjusting $m$ and $n$. A few examples are listed in the following table.
+
+\begin{tabular}{|c|c|c|}
+\hline
+    \textbf{Name} & \textbf{Description} & \textbf{Formula} \\
+\hline
+    Schnorr        & Digital Signatures & $n=1$, $m=1$, $\phi(x) = \left\{ u = g^x \right\}$ \\
+    Chaum-Pederson & Prove that a triple X,Y,Z is a DH triple &  $n=1$, $m=2$, $\phi(x) = \left\{ X = g^x \land Z = Y^x\right\}$ \\
+    Okamoto        & Prove ``representation'' of dlog &  $n=2$, $m=1$, $\phi(x_1, x_2) = \left\{ u = g^{x_1} h^{x_2} \right\} $ \\
+\hline
+\end{tabular}
+
+\begin{figure}[h]
+\centering
+
+\begin{tikzpicture}
+    \node[draw, rectangle, align=center] (P) {\textbf{Prover} \\ (knows $x_1, \dots, x_n$)};
+    \node[below=4cm of P] (P2) {};
+    \node[right=5cm of P, draw, rectangle, align=center] (V) {\textbf{Verifier} \\ (knows $u_1, \dots, u_m$) };
+    \node[below=4cm of V] (V2) {};
+
+    \node[below=1cm of P] (a) {};
+    \node[below=1.5cm of V] (b) {};
+    \node[below=2cm of V] (c) {};
+    \node[below=2.5cm of P] (d) {};
+    \node[below=3cm of P] (e) {};
+    \node[below=3.5cm of V] (f) {};
+
+    \node[left=0.2cm of a, align=right] (genR) { $r_1, \dots, r_n \getsr Z_q$ \\ $R_i \gets \prod_{j=1}^n g_{ij}^{r_j}$ };
+    \node[right=0.2cm of c] (genc) { $c \getsr Z_q$ };
+    \node[left=0.2cm of e, align=right] (genz) { $z \gets r_j + x_jc$ \\ for $j=1$ to $n$ };
+    \node[right=0.2cm of f, align=center] (verify) { Check that for $i=1$ to $m$\\
+    $\prod_{j=1}^{n} g_{ij}^(z_j) = R_i * u_i^c $ };
+
+    \draw[-] (P) -- (P2);
+    \draw[-] (V) -- (V2);
+
+    \draw[->] (a.center) -- (b.center) node [midway, above] {$R_1, \dots, R_m$};
+    \draw[->] (c.center) -- (d.center) node [midway, label=$c$] {};
+    \draw[->] (e.center) -- (f.center) node [midway, label=$z$] {};
+
+\end{tikzpicture}
+\end{figure}
+
 
 \subsection{Properties of Zero-Knowledge Proofs}
 
@@ -81,7 +148,6 @@ Ret $\Simu_H(M)$
 So far, we have shown the basic intuition behind showing zero-knowledge in an interactive setting.
 Informally speaking in interactive settings the verifier can ask ``questions'' about the proof and gets answers in form of witnesses from the prover.
 In an non-interactive setting, the prover has to provide answer to all possible ``questions'' a priori.
-
 
 Figure \ref{fig:nizk} outlines the basic games for the non-interactive zero-knowledge proof.
 
