--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -25,6 +25,38 @@
 % Suggestions on bib maintenance welcome, we can refine this as we go on.
 %
 
+@inproceedings{groth2006perfect,
+   author={Groth, Jens  and Ostrovsky, Rafail  and Sahai, Amit},
+   title={Perfect Non-interactive Zero Knowledge for NP},
+   booktitle={Advances in Cryptology - EUROCRYPT 2006},
+   year={2006},
+   pages={339--358}
+}
+
+@inproceedings{ben2014succinct,
+   title={Succinct non-interactive zero knowledge for a von Neumann architecture},
+   author={Ben-Sasson, Eli and Chiesa, Alessandro and Tromer, Eran and Virza, Madars},
+   booktitle={23rd $\{$USENIX$\}$ Security Symposium ($\{$USENIX$\}$ Security 14)},
+   pages={781--796},
+   year={2014}
+}
+
+
+@misc{groth10shortpairing,
+   author = {Jens Groth},
+   title = {Short Pairing-based Non-interactive Zero-Knowledge Arguments},
+   year = {2010}
+}
+
+@article{canetti2004random,
+    author = {Canetti, Ran and Goldreich, Oded and Halevi, Shai},
+    title = {The Random Oracle Methodology, Revisited},
+    journal = {J. ACM},
+    year = {2004},
+    pages = {557--594},
+    publisher = {ACM}
+} 
+
 
 @article{dolev1983security,
   title={On the security of public key protocols},
