added changes from proof-readers

--- a/notes/main.tex
+++ b/notes/main.tex
@@ -134,7 +134,7 @@
 \newpage
 \input{hashfunctions3}
 \newpage
-\input{pke}
+\input{computationalnumbertheory-rsa}
 \newpage
 \input{pke2}
 \newpage
